--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Currículo - Douglas Ramos Charqueiro</title>
-        <link rel="stylesheet" href="/styles.css"> 
+        <link rel="stylesheet" href="styles.css"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" 
               integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" 
               crossorigin="anonymous" referrerpolicy="no-referrer" /> 
@@ -13,16 +13,16 @@
 <body>
     <div class="language-buttons">
         <button id="pt-br-button" onclick="changeLanguage('pt-BR')">
-            <img src="/imag/band_Brasil.png" alt="Bandeira do Brasil" width="30">
+            <img src="imag/band_Brasil.png" alt="Bandeira do Brasil" width="30">
         </button>
         <button id="en-button" onclick="changeLanguage('en')">
-            <img src="/imag/band_EUA.png" alt="band_EUA" width="30">
+            <img src="imag/band_EUA.png" alt="band_EUA" width="30">
         </button>
     </div>
 
     <div class="container">
         <div class="profile">
-            <img src="/imag/minhaft.jpg" alt="Foto de Douglas Ramos Charqueiro" class="profile-picture">
+            <img src="imag/minhaft.jpg" alt="Foto de Douglas Ramos Charqueiro" class="profile-picture">
             
             <h1 id="name" class="language-dependent">Douglas Ramos Charqueiro</h1>
         </div>
@@ -37,11 +37,11 @@
             <div class="info-item">
                 <div class="quick-links">
                     <a href="http://www.linkedin.com/in/douglas-ramos-charqueiro-075a87293" target="_blank">
-                        <img src="/imag/linkedin.jpeg" alt="Ícone do LinkedIn" id="linkedin-icon">
+                        <img src="imag/linkedin.jpeg" alt="Ícone do LinkedIn" id="linkedin-icon">
                         <span id="linkedin" class="language-dependent">LinkedIn</span>
                     </a>
                     <a href="https://github.com/douglas565" target="_blank">
-                        <img src="/imag/github2.png" alt="Ícone do GitHub" id="github-icon">
+                        <img src="imag/github2.png" alt="Ícone do GitHub" id="github-icon">
                         <span id="github" class="language-dependent">GitHub</span>
                     </a>
                 </div>
@@ -250,7 +250,7 @@
                 </div>
             </div>
 
-        <script src="/chatbot.js"></script> 
+        <script src="chatbot.js"></script> 
 </body>
 
 </html>
