--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <div class="language-buttons">
         <button id="pt-br-button" onclick="changeLanguage('pt-BR')">
-            <img src="imag/band_Brasil.png" alt="Bandeira do Brasil" width="30">
+            <img src="imag/brasil.png" alt="Bandeira do Brasil" width="30">
         </button>
         <button id="en-button" onclick="changeLanguage('en')">
-            <img src="imag/band_EUA.png" alt="band_EUA" width="30">
+            <img src="imag/usa_band.webp" alt="band_EUA" width="30">
         </button>
     </div>
 
