--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
             </div>
 
-       <script src="js/chatbot.js"></script>  
+       <script src="chatbot.js"></script>  
 </body>
 
 </html>
