--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="imag/brasil.png" alt="Bandeira do Brasil" width="30">
         </button>
         <button id="en-button" onclick="changeLanguage('en')">
-            <img src="imag/usa_band.webp" alt="band_EUA" width="30">
+            <img src="imag/usa_band.webp" alt="bandeira estados unidos" width="30">
         </button>
     </div>
 
