--- a/index.html
+++ b/index.html
@@ -177,28 +177,21 @@
                         
                         <br>
                         <p>
-                        O código em C apresenta a implementação de um jogo de cartas estratégico e tático, onde dois jogadores se enfrentam em uma série de rodadas. Cada jogador recebe uma mão de cartas de um baralho que inclui cartas de diferentes cores e valores. O <strong>objetivo</strong> é vencer as rodadas acumulando pontos, que são determinados pelo resultado de combates entre as cartas jogadas pelos jogadores.
+                        Eu desenvolvi código em C apresenta a implementação de um jogo de cartas estratégico e tático, onde dois jogadores se enfrentam em uma série de rodadas. Cada jogador recebe uma mão de cartas de um baralho que inclui cartas de diferentes cores e valores. O <strong>objetivo</strong> é vencer as rodadas acumulando pontos, que são determinados pelo resultado de combates entre as cartas jogadas pelos jogadores.
                         </p>
                         <br>
                         <p>
-                        No início do jogo, o baralho é inicializado e embaralhado. As cartas são distribuídas entre os jogadores, que então alternam suas jogadas em cada rodada. Durante sua vez, um jogador pode escolher jogar uma carta da sua mão, exibir as cartas presentes na mesa ou encerrar o jogo.
+                        Este projeto foi um trabalho de Lógica e algoritimo da minha graduação em Sistemmas da Informmação na Universidade Federal de Santa Maria em 2023.
                         </p>
                         <br>
                         <p>
-                        Quando um jogador decide jogar uma carta, essa carta é colocada na mesa e um combate é iniciado. O combate envolve comparar o valor total das cartas pretas jogadas pelos jogadores. Certas cartas têm valores especiais que podem influenciar o resultado do combate. O jogador vencedor do combate recebe pontos e, em alguns casos, cartas adicionais são distribuídas entre os jogadores.
+                            
                         </p>
-                        <br>
-                        <p>
-                        Ao final de cada rodada, os pontos são contabilizados com base nos resultados dos combates e na quantidade de rodadas jogadas. O jogo continua até que todas as cartas do baralho sejam utilizadas. O jogador com mais pontos ao final do jogo é declarado o vencedor.
-                        </p>
-                        <br>
-                        Essa implementação combina elementos de estratégia, gestão de mão e sorte, proporcionando uma experiência desafiadora e divertida para os jogadores.
-                    </p>
 
                     <p id="project-1-technologies" class="language-dependent">Tecnologias usadas: C.</p>
                     <a id="project-1-github" href="https://github.com/douglas565/Card-Game-dumb-play.git" target="_blank">
                         <i class="fab fa-github"></i>
-                        <span id="project-1-github-text" class="language-dependent">Código-fonte no GitHub: </span>
+                        <span id="project-1-github-text" class="language-dependent">Para saber mais acesse o link para o Código-fonte no GitHub</span>
                     </a>
                 </div>
             </div>
