--- a/index.html
+++ b/index.html
@@ -176,13 +176,14 @@
                     <p id="project-1-description" class="language-dependent">
                         
                         <br>
-                        <p>
+                        <p id="project-1-descri1" class="language-dependent">
                         Eu desenvolvi código em C apresenta a implementação de um jogo de cartas estratégico e tático, onde dois jogadores se enfrentam em uma série de rodadas. Cada jogador recebe uma mão de cartas de um baralho que inclui cartas de diferentes cores e valores. O <strong>objetivo</strong> é vencer as rodadas acumulando pontos, que são determinados pelo resultado de combates entre as cartas jogadas pelos jogadores.
                         </p>
                         <br>
-                        <p>
-                        Este projeto foi um trabalho de Lógica e algoritimo da minha graduação em Sistemmas da Informmação na Universidade Federal de Santa Maria em 2023.
+                        <p id="project-1-descri2" class="language-dependent">
+                        Este projeto foi um trabalho de Lógica e algoritimo da minha graduação em Sistemas da Informação na Universidade Federal de Santa Maria em 2023.
                         </p>
+                    </p>
 
                     <p id="project-1-technologies" class="language-dependent">Tecnologias usadas: C.</p>
                     <a id="project-1-github" href="https://github.com/douglas565/Card-Game-dumb-play.git" target="_blank">
