--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <button id="en-button" onclick="changeLanguage('en')">
             <img src="imag/usa_band.webp" alt="bandeira estados unidos" width="30">
         </button>
+        
+        <button id="dark-mode-toggle">Modo Escuro</button>
     </div>
 
     <div class="container">
