--- a/intro.html
+++ b/intro.html
@@ -12,6 +12,14 @@
     <div id="space-container">
     </div>
     <div id="space-container-top"></div>
-    <img class="cosmos center" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1037366/cosmos.png" />    
+    <img class="cosmos center" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1037366/cosmos.png" />   
+    
+    <script>
+        // Redireciona para 'portfolio.html' após 5 segundos (5000 milissegundos)
+    setTimeout(function() {
+        window.location.href = 'portfolio.html';
+      }, 10000);
+    </script>
+
 </body>
 </html>
