--- a/intro.html
+++ b/intro.html
@@ -17,7 +17,7 @@
     <script>
         // Redireciona para 'portfolio.html' após 5 segundos (5000 milissegundos)
     setTimeout(function() {
-        window.location.href = 'portfolio.html';
+        window.location.href = 'portifolio.html';
       }, 10000);
     </script>
 
