--- a/intro.html
+++ b/intro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
-    <script defer src="main.js"></script>
+    <script defer src="intro.js"></script>
     <title>Document</title>
 </head>
 <body>
