--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,8 @@
     <div id="space-container">
     </div>
     <div id="space-container-top"></div>
-    <img class="cosmos center" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1037366/cosmos.png" />   
+    <img class="cosmos center" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1037366/cosmos.png" />  
+    <h1 class="center">Bem-vindo ao meu portfólio</h1> 
     
     <script>
         // Redireciona para 'portfolio.html' após 5 segundos (5000 milissegundos)
@@ -23,3 +24,5 @@
 
 </body>
 </html>
+
+
