--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="intro.css">
+    <link rel="stylesheet" href="css/intro.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
     <script defer src="intro.js"></script>
     <title>Document</title>
