--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="space-container">
     </div>
     <div id="space-container-top"></div>
-    <img class="cosmos center" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1037366/cosmos.png" />  
+    <img class="cosmos center" src="/imag/fundotras.png" />  
     
     <script>
         // Redireciona para 'portfolio.html' após 5 segundos (10000 milissegundos)
