--- a/portifolio.html
+++ b/portifolio.html
@@ -20,7 +20,7 @@
         <button id="en-button" onclick="changeLanguage('en')">
             <img src="imag/usa_band.webp" alt="bandeira estados unidos" width="30">
         </button>
-        
+
     </div>
 
     <div class="container">
@@ -56,7 +56,7 @@
             <p id="about-description" class="language-dependent">Sou um profissional de tecnologia com paixão por
                 desenvolvimento de software e
                 aprendizado contínuo. Atualmente trabalho como Técnico em Eletrotécnica na Justiça Federal de Santa
-                Catarina, com foco em automação industrial. Sou graduando em Ciência da Computação pela UNISUL e possuo
+                Catarina, com foco em automação industrial. Estou cursando Ciência da Computação pela UNISUL e possuo
                 experiência em diversos projetos de software e hardware. Sou apaixonado por aprender novas tecnologias e
                 aprimorar minhas habilidades para entregar soluções inovadoras e eficientes.</p>
         </div>
