--- a/portifolio.html
+++ b/portifolio.html
@@ -15,10 +15,10 @@
 <body>
     <div class="language-buttons">
         <button id="pt-br-button" onclick="changeLanguage('pt-BR')">
-            <img src="imag/brasil.png" alt="Bandeira do Brasil" width="30">
+            <img src="imag/brasil.png" alt="Bandeira do Brasil" width="50">
         </button>
         <button id="en-button" onclick="changeLanguage('en')">
-            <img src="imag/usa_band.webp" alt="bandeira estados unidos" width="30">
+            <img src="imag/usa_band.webp" alt="bandeira estados unidos" width="50">
         </button>
 
     </div>
@@ -27,7 +27,7 @@
         <div class="profile">
             <img src="imag/minhaft.jpg" alt="Foto de Douglas Ramos Charqueiro" class="profile-picture">
 
-            <h1 id="name" class="language-dependent">Douglas Ramos Charqueiro</h1>
+            <h1 id="name" class="inicio">Douglas Ramos Charqueiro</h1>
         </div>
 
         <div class="info">
