--- a/portifolio.html
+++ b/portifolio.html
@@ -27,7 +27,7 @@
         <div class="profile">
             <img src="imag/minhaft.jpg" alt="Foto de Douglas Ramos Charqueiro" class="profile-picture">
 
-            <h1 id="name" class="inicio">Douglas Ramos Charqueiro</h1>
+            <h1 id="name" class="language-dependent">Douglas Ramos Charqueiro</h1>
         </div>
 
         <div class="info">
