--- a/portifolio.html
+++ b/portifolio.html
@@ -179,7 +179,7 @@
                     <p id="project-1-description" class="language-dependent">
 
                         <br>
-                    <p id="project-1-descri1" class="language-dependent">
+                    <p id="project-1-des1" class="language-dependent">
                         Eu desenvolvi código em C apresenta a implementação de um jogo de cartas estratégico e tático,
                         onde dois jogadores se enfrentam em uma série de rodadas. Cada jogador recebe uma mão de cartas
                         de um baralho que inclui cartas de diferentes cores e valores. O <strong>objetivo</strong> é
@@ -187,7 +187,7 @@
                         cartas jogadas pelos jogadores.
                     </p>
                     <br>
-                    <p id="project-1-descri2" class="language-dependent">
+                    <p id="project-1-des2" class="language-dependent">
                         Este projeto foi um trabalho de Lógica e algoritimo da minha graduação em Sistemas da Informação
                         na Universidade Federal de Santa Maria em 2023.
                     </p>
