--- a/portifolio.html
+++ b/portifolio.html
@@ -53,12 +53,16 @@
 
         <div class="section">
             <h2 id="about-title" class="section-title language-dependent">Sobre</h2>
-            <p id="about-description" class="language-dependent">Sou um profissional de tecnologia com paixão por
-                desenvolvimento de software e
-                aprendizado contínuo. Atualmente trabalho como Técnico em Eletrotécnica na Justiça Federal de Santa
-                Catarina, com foco em automação industrial. Estou cursando Ciência da Computação pela UNISUL e possuo
-                experiência em diversos projetos de software e hardware. Sou apaixonado por aprender novas tecnologias e
-                aprimorar minhas habilidades para entregar soluções inovadoras e eficientes.</p>
+            <p id="about-description" class="language-dependent">Meu nome é Douglas Ramos Charqueiro, formado pelo
+                Colégio Técnico Industrial de Santa Maria em Eletrotécnica (2023). Durante meu estágio na Base Aérea de
+                Santa Maria, obtive experiência em manutenção predial e de computadores. Minha trajetória acadêmica
+                começou em 2023, com uma graduação em Sistemas de Informação, onde atuei em um projeto de iniciação
+                científica sobre Inteligência em Iluminação para Smart Cities, focando na transmissão de dados e
+                criptografia. Posteriormente, me mudei para Florianópolis/SC e atualmente estou cursando Ciências da
+                Computação na Unisul. Em março de 2024, iniciei no Grupo Setup, com manutenção elétrica no Hospital
+                Universitário Polydoro Ernani de São Thiago. Posteriormente, fui transferido para a Justiça Federal de
+                Santa Catarina, onde atuo na área de Automação Industrial, gerenciando o controle do prédio e realizando
+                modificações no software Envision que permaneci até 30 de Setembro de 2024.</p>
         </div>
 
 
@@ -70,7 +74,7 @@
             <div class="experience-item">
                 <h3 id="experience-job-title" class="language-dependent">Técnico em Eletrotécnica</h3>
                 <p id="experience-company" class="language-dependent">Grupo Setup - Florianópolis, SC</p>
-                <p id="experience-date" class="language-dependent">Março de 2024 - Presente</p>
+                <p id="experience-date" class="language-dependent">Março de 2024 - Setembro de 2024</p>
                 <ul>
                     <li id="experience-description-1" class="language-dependent">Realizo manutenção elétrica no Hospital
                         Universitário Polydoro
